--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  
 <body>
   <h1>SPRINKLES$</h1>
-  <p> I WANTED TO PUT MORE INFO HERE</p>
+  <p> One day at a time</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" title="idk what the f that is" />
 </body>
  
